<resources>
    <string name="app_name">Регистрация студентов</string>
    <string name="next">Дальше</string>
    <string name="back">Назад</string>
    <string name="add_student">Добавить студента</string>
    <string name="show_students">Просмотр студентов</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_middleName">Введите отчество</string>
    <string name="enter_birthday">Введите дату рождения (dd.mm.yyyy)</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middleName">Отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="save_to_file">Сохранить в файл</string>
</resources>
