<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shm.dim.lab_6_7.activitys.ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    style="@style/TextView"
                    android:layout_width="150dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/surname" />
                <TextView
                    android:id="@+id/tvSurname"
                    android:textAlignment="viewEnd"
                    style="@style/TextView"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    style="@style/TextView"
                    android:layout_width="150dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/name" />
                <TextView
                    android:id="@+id/tvName"
                    android:textAlignment="viewEnd"
                    style="@style/TextView"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    style="@style/TextView"
                    android:layout_width="150dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/middleName" />
                <TextView
                    android:id="@+id/tvMiddleName"
                    android:textAlignment="viewEnd"
                    style="@style/TextView"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    style="@style/TextView"
                    android:layout_width="150dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/birthday" />
                <TextView
                    android:id="@+id/tvBirthday"
                    android:textAlignment="viewEnd"
                    style="@style/TextView"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/buttonBack"
                    style="@style/Button"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:onClick="onClick_Back"
                    android:text="@string/back" />
                <Button
                    android:id="@+id/buttonSave"
                    android:layout_row="0"
                    android:layout_column="1"
                    style="@style/Button"
                    android:text="@string/save_to_file"
                    android:onClick="onClick_Save"/>
            </GridLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>