<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shm.dim.lab_6_7.activitys.BirthdayActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etBirthday"
                style="@style/EditText"
                android:inputType="date"
                android:hint="@string/enter_birthday"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/buttonBack"
                    android:layout_row="0"
                    android:layout_column="0"
                    style="@style/Button"
                    android:onClick="onClick_Back"
                    android:text="@string/back" />
                <Button
                    android:id="@+id/buttonNext"
                    android:layout_row="0"
                    android:layout_column="1"
                    style="@style/Button"
                    android:text="@string/next"
                    android:onClick="onClick_Next"/>
            </GridLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>